<resources>
    <string name="app_name">Vaccinator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="get_vaccinated">Get Vaccinated</string>
    <string name="total_vaccination_doses">Total Vaccination Doses</string>
    <string name="today">Today</string>
    <string name="value_2">value 2</string>
    <string name="dose_1">Dose 1</string>
    <string name="dose_2">Dose 2</string>
    <string name="value1">value1</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_user">Create new user</string>
    <string name="register_new_user">Register new user</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="first_name">First name</string>
    <string name="confirm_this_password">Confirm this password</string>
    <string name="save">Save</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">content</string>
    <string name="vaccination_login">Vaccination Login</string>
    <string name="click_here_for_sign_up">Click here for Sign Up</string>
    <string name="first_name_l">First Name</string>
    <string name="last_name_l">Last name</string>
    <string name="last_name_">Last name</string>
    <string name="phone">Phone</string>
    <string name="phone_label">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="click_here_for_login">Click here for Login</string>
    <string name="patient_name">Patient Name:</string>
    <string name="appointment_time">Appointment Time :</string>
    <string name="full_name">Full Name</string>
    <string name="time">Time</string>
    <string name="hospital">Hospital:</string>
    <string name="hospital_label">Hospital</string>
    <string name="vaccine">Vaccine:</string>
    <string name="vaccine_label">Vaccine</string>
    <string name="age">Age:</string>
    <string name="age_holder">30</string>
    <string name="edit_l">Edit</string>
    <string name="covin_vaccination">Covin Vaccination</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_email">Enter Email</string>
    <string name="select_vaccine">Select Vaccine</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time_slot">Time Slot</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="covi_vaccination">Covi Vaccination</string>
    <string name="hello_user">Hello, User</string>
    <string name="sites_conducting_vaccination">Sites Conducting Vaccination</string>
    <string name="government">Government</string>
    <string name="private_hos">Private</string>
    <string name="total_registrations">Total Registrations</string>
    <string name="age_18_44">Age 18 - 44</string>
    <string name="age_45">Age 45+</string>
    <string name="the_hospital_name">The Hospital Name</string>
    <string name="_1524_shappered_rd_waterloo_on">1524 Shappered Rd, Waterloo, ON</string>
    <string name="book">Book</string>
</resources>