<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/title_bg"
        android:touchscreenBlocksFocus="true"
        android:padding="0dp"
        android:layout_margin="0dp"
        tools:context=".AppointmentFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/covin_vaccination"
                    android:textColor="#FAFAFA"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/rounded_border"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/hospital_name"
                        android:textColor="#232323"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/hos_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:enabled="false"
                        android:padding="5dp"
                        android:background="@drawable/input_field"
                        android:hint="@string/enter_your_name"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView50"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/first_name"
                        android:textColor="#232323"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/first_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/input_field"
                        android:ems="10"
                        android:enabled="true"
                        android:hint="@string/enter_your_first_name"
                        android:inputType="textPersonName"
                        android:padding="5dp"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView505"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/last_name"
                        android:textColor="#232323"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/last_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/input_field"
                        android:ems="10"
                        android:enabled="true"
                        android:hint="@string/enter_your_last_name"
                        android:inputType="textPersonName"
                        android:padding="5dp"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck"
                        android:autofillHints="" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.15"
                        >
                        <TextView
                            android:id="@+id/textViewAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/age"
                            android:textColor="#232323"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/age_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_field"
                            android:ems="10"
                            android:enabled="true"
                            android:hint="@string/enter_age"
                            android:inputType="number"
                            android:padding="5dp"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck"
                            android:autofillHints="" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.4
"
                        >

                        <TextView
                            android:id="@+id/textViewemail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/email"
                            android:textColor="#232323"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/email_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_field"
                            android:ems="10"
                            android:enabled="true"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck"
                            android:autofillHints="" />

                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/select_vaccine"
                        android:textColor="#232323"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/vaccineList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/input_field"
                        android:padding="6dp"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/date"
                        android:textColor="#232323"
                        android:textSize="16sp"
                        android:textStyle="bold" />


<!--                    <DatePicker-->
<!--                        android:id="@+id/simpleDatePicker"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:datePickerMode="calendar"/>-->

                    <EditText
                        android:id="@+id/dateText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/input_field"
                        android:ems="10"
                        android:hint="@string/select_date"
                        android:inputType="date"
                        android:padding="5dp"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/time_slot"
                        android:textColor="#232323"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/timeSpinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/input_field"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </LinearLayout>

                <Button
                    android:id="@+id/book_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/submit_btn"
                    android:foregroundGravity="bottom"
                    android:text="@string/book_appointment"
                    android:textColor="#FDFDFD"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
