<FrameLayout xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/map_frag_container"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/hospital_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_gravity="bottom"
        android:foregroundGravity="bottom"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_sheet"
        android:visibility="gone">
        
            <TextView
                android:id="@+id/hospitalName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="15dp"
                android:foregroundGravity="top"
                android:gravity="top"
                android:text="@string/the_hospital_name"
                android:textColor="#1C1C1C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hospitalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/_1524_shappered_rd_waterloo_on" />

        <Button
            android:id="@+id/book_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/submit_btn"
            android:foregroundGravity="bottom"
            android:text="@string/book"
            android:textColor="#FDFDFD"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</FrameLayout>